--- a/index.html
+++ b/index.html
@@ -6,3 +6,37 @@
     
     <title>Hannah Dalwai</title>
 </head>
+
+<body>
+     
+    <nav class="navbar navbar-expand-lg navbar-second bg-light fixed-top " >
+      <div class="container-fluid">
+        <a class="navbar-brand"><i class="bi bi-laptop"></i></a>
+        <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon-dark"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="testimonals.html">Testimonals</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+          Portfolio
+          </span>
+        </div>
+      </div>
+    </nav>
+  
