--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      
     <nav class="navbar navbar-expand-lg navbar-second bg-light fixed-top " >
       <div class="container-fluid">
-        <a class="navbar-brand"><i class="bi bi-laptop"></i></a>
+        <a class="navbar-brand"></a>
         <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon-dark"></span>
         </button>
