--- a/index.html
+++ b/index.html
@@ -102,42 +102,21 @@
               <i class="fas fa-gem me-3"></i>Cliff Hangout
             </h6>
           </div>
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Products
-            </h6>
-            <p>
-              <a href="#!" class="text-reset"><i class="bi bi-book"></i>Books</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset"><i class="bi bi-bookmark"></i>Accessories</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset"> <i class="bi bi-cup"></i>Mugs</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset"><i class="bi bi-book"></i>Book Sleeves</a>
-            </p>
-          </div>
+  
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              Links
             </h6>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-piggy-bank"></i>Pricing</a>
+              <a href="#!" class="text-reset"><i class="bi bi-piggy-bank"></i>Github</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-gear"></i>Settings</a>
+              <a href="#!" class="text-reset"><i class="bi bi-gear"></i>Netlify</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-basket"></i>Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset"><i class="bi bi-info-circle"></i>Help</a>
+              <a href="#!" class="text-reset"><i class="bi bi-basket"></i>Linkdin</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -151,10 +130,10 @@
             <p><i class="fas fa-home me-3"></i><i class="bi bi-geo-alt"></i> 123 Imaam Road, CT 10012, South Africa</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              <i class="bi bi-envelope-open"></i> info@example.com
+              <i class="bi bi-envelope-open"></i> hannahdalwai4@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i><i class="bi bi-telephone"></i> + 27 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i><i class="bi bi-telephone"></i> + 27 234 567 89</p>
+            <p><i class="fas fa-phone me-3"></i><i class="bi bi-telephone"></i> Contact Number </p>
+            <p><i class="fas fa-print me-3"></i><i class="bi bi-telephone"></i> + 27 74 525 0800</p>
           </div>
           <!-- Grid column -->
         </div>
