--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
             <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link " href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
