--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
               Links
             </h6>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-piggy-bank"></i>Github</a>
+              <a href="#!" class="text-reset"><i class="bi bi-linkedin"> </i>Github</a>
             </p>
             <p>
               <a href="#!" class="text-reset"><i class="bi bi-gear"></i>Netlify</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-basket"></i>Linkdin</a>
+              <a href="#!" class="text-reset"><i class="bi bi-linkedin"></i></i>Linkdin</a>
             </p>
           </div>
           <!-- Grid column -->
