--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,52 @@
     <br><br>
     
 
+    <div class="container-lg">
+
+<div class="row justify-content-center align-items-center">
+  <div class="display-2">Contact Page </div>
+    <form class="was-validated" method="post"action="https://formspree.io/f/moqyzwwl">
+   
+    <div class="mb-3">
+      <label for="validationTextarea" class="form-label">Comment</label>
+      <textarea  name="comment" class="form-control is-invalid" id="validationTextarea" placeholder="Insert Comment/Inquiry Here" required></textarea>
+      <div class="invalid-feedback">
+        Please enter a message in the textarea.
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="validationTextarea" class="form-label">Email Address</label>
+      <input name="email" class="form-control is-invalid" id="validationTextarea" placeholder="Insert Email Address Here" required></input>
+      <div class="invalid-feedback">
+        Please enter a message in the textarea.
+      </div>
+    </div>
+
+  
+    <div class="form-check mb-3">
+      <input name="check" type="checkbox" class="form-check-input" id="validationFormCheck1" required>
+      <label class="form-check-label" for="validationFormCheck1">I am Human</label>
+      <div class="invalid-feedback">Check box to verify</div>
+    </div>
+    <div class="mb-3">
+      <select name="reason" class="form-select" required aria-label="select example">
+        <option value="">Subject matter</option>
+        <option value="1">Pricing</option>
+        <option value="2">Customer Help</option>
+        <option value="3">Events</option>
+        <option value="4">Book Club</option>
+      </select>
+      <div  class="invalid-feedback"  >Example invalid select feedback</div>
+    </div>
+
+    <div class="mb-3">
+      <button class="btn btn-primary" type="submit"    >Submit form</button>
+    </div>
+  </form>
+</div>
+</div>
+
 
 
 
@@ -57,7 +103,7 @@
 
     <!-- Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<footer class="text-center text-lg-start bg-light text-muted fixed-bottom">
+<footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
     <section
       class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" >
