--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,6 @@
     <div class="container-lg">
 
 <div class="row justify-content-center align-items-center">
-  <div class="display-2">Contact Page </div>
     <form class="was-validated" method="post"action="https://formspree.io/f/moqyzwwl">
    
     <div class="mb-3">
@@ -74,10 +73,10 @@
     <div class="mb-3">
       <select name="reason" class="form-select" required aria-label="select example">
         <option value="">Subject matter</option>
-        <option value="1">Pricing</option>
-        <option value="2">Customer Help</option>
-        <option value="3">Events</option>
-        <option value="4">Book Club</option>
+        <option value="1">Job Offer</option>
+        <option value="2">Internship offer </option>
+        <option value="3">Inquiry</option>
+        <option value="4">Other</option>
       </select>
       <div  class="invalid-feedback"  >Example invalid select feedback</div>
     </div>
