new formspree link

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <div class="container-lg">
 
 <div class="row justify-content-center align-items-center">
-    <form class="was-validated" method="post"action="https://formspree.io/f/moqyzwwl">
+    <form class="was-validated" method="post"action="https://formspree.io/f/xknkakzd">
    
     <div class="mb-3">
       <label for="validationTextarea" class="form-label">Comment</label>
@@ -60,7 +60,7 @@
       <label for="validationTextarea" class="form-label">Email Address</label>
       <input name="email" class="form-control is-invalid" id="validationTextarea" placeholder="Insert Email Address Here" required></input>
       <div class="invalid-feedback">
-        Please enter a message in the textarea.
+        Please enter your email in the textarea.
       </div>
     </div>
 
