--- a/testimonals.html
+++ b/testimonals.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="bootstrap-5.1.3-dist/css">
     <link rel="icon" href="images/HD.png" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     
@@ -9,7 +10,7 @@
 
 <body>
      
-    <nav class="navbar navbar-expand-lg navbar-second bg-light fixed-top " >
+    <nav class="navbar navbar-expand-lg navbar-second bg-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand"></a>
         <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
