--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       </div>
     </nav>
   
-      <div class="container-lg"> 
-         <div class="col-lg-6 col-sm-12 text-center d-md-block">
-                  <img class="img-fluid" src="assets/book.jpg" alt="">
-              </div>
-              
-          <div class="row justify-content-center align-items-center">
+      <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+ 
+         <div class="col-lg-6 col-sm-12 text-center d-md-block ">
+                  <img id="Hpicture" class="img-fluid" src="images/placeholder.jpg" alt="">
+              </div> 
               <div class="col-lg-6 col-sm-12 text-center text-md-start">
-                  <h1>
+                  <h1>xc 
                       <div class="display-2">Book Of the Month</div>
                       <div class="display-5 text-muted">Good Girl's Guide to Murder</div>
                   </h1>
