--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 
 
     <!-- Footer -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
     <section
@@ -151,7 +150,7 @@
   
 
 
-  
+<link rel="stylesheet" href="bootstrap.bundle.min.js">   
 </body>
 </html>
 
