--- a/testimonals.html
+++ b/testimonals.html
@@ -53,7 +53,6 @@
 
 
     <!-- Footer -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <footer class="text-center text-lg-start bg-light text-muted fixed-bottom">
     <!-- Section: Social media -->
     <section
@@ -130,7 +129,7 @@
   
 
 
-  
+  <link rel="stylesheet" href="bootstrap.bundle.min.js">   
 </body>
 </html>
 
