--- a/index.html
+++ b/index.html
@@ -47,32 +47,24 @@
                   <img id="Hpicture" class="img-fluid" src="images/placeholder.jpg" alt="">
               </div> 
               <div class="col-lg-6 col-sm-12 text-center text-md-start">
-                  <h1>xc 
-                      <div class="display-2">Book Of the Month</div>
-                      <div class="display-5 text-muted">Good Girl's Guide to Murder</div>
+                  <h1 id="header-text">
+                      <div class="display-5">Book Of the Month</div>
+                      <div class="display-6 text-muted">Good Girl's Guide to Murder</div>
                   </h1>
-                  <p class="lead my-4 text-muted"> 
-                    The case is closed. Five years ago, schoolgirl Andie Bell was murdered by Sal Singh. The police know he did it. Everyone in town knows he did it.
-                    
-                    But having grown up in the same small town that was consumed by the murder, Pippa Fitz-Amobi isn't so sure. When she chooses the case as the topic for her final year project, she starts to uncover secrets that someone in town desperately wants to stay hidden. And if the real killer is still out there, how far will they go to keep Pip from the truth?</p>
                   <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
               </div>
-            
          </div>
       </div> 
-
-
-
-
-
-
-
-
-
-
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
     <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
