--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Hannah Dalwai</title>
 </head>
 
-<body>
+<body id="bgimg">
      
     <nav class="navbar navbar-expand-lg navbar-second bg-light fixed-top " >
       <div class="container-fluid">
@@ -40,7 +40,7 @@
       </div>
     </nav>
   
-      <div class="container-lg">
+      <div class="container-lg" >
         <div class="row justify-content-center align-items-center">
  
          <div class="col-lg-6 col-sm-12 text-center d-md-block ">
@@ -48,10 +48,11 @@
               </div> 
               <div class="col-lg-6 col-sm-12 text-center text-md-start">
                   <h1 id="header-text">
-                      <div class="display-5">Book Of the Month</div>
-                      <div class="display-6 text-muted">Good Girl's Guide to Murder</div>
+                      <div class="display-5">My name is Hannah Dalwai.</div>
+                      <div class="display-6 text-muted">Aspiring fullstack developer</div>
+                      <br><h2>Student at Life Choices Academy</h2>
                   </h1>
-                  <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+                  <a href="#pricing" class="btn btn-secondary btn-lg">View CV</a>
               </div>
          </div>
       </div> 
