--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               </div> 
               <div class="col-lg-6 col-sm-12 text-center text-md-start">
                   <h1 id="header-text">
-                      <div class="display-5">My name is Hannah Dalwai.</div>
-                      <div class="display-6 text-muted">Aspiring fullstack developer</div>
-                      <br><h2>Student at Life Choices Academy</h2>
+                      <div class="display-5 fw-bold">My name is Hannah Dalwai.</div>
+                      <div class="display-6 text-dark fw-bold">Aspiring fullstack developer</div>
+                      <br><h2 id="h2ftw">Student at Life Choices Academy</h2>
                   </h1>
                   <a href="#pricing" class="btn btn-secondary btn-lg">View CV</a>
               </div>
