--- a/index.html
+++ b/index.html
@@ -261,17 +261,17 @@
     </div>
     <div class="mb-3">
       <select name="reason" class="form-select" required aria-label="select example">
-        <option value="">Subject matter</option>
-        <option value="1">Pricing</option>
-        <option value="2">Customer Help</option>
-        <option value="3">Events</option>
-        <option value="4">Book Club</option>
+        <option value="">Subject Matter</option>
+        <option value="1">Job offer</option>
+        <option value="2">Internship offer</option>
+        <option value="3">Inquiry</option>
+        <option value="4">Other</option>
       </select>
       <div  class="invalid-feedback"  >Example invalid select feedback</div>
     </div>
 
     <div class="mb-3">
-      <button class="btn btn-primary" type="submit"    >Submit form</button>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </div>
   </form>
 </div>
@@ -285,7 +285,7 @@
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" >
     <!-- Left -->
     <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
+      <span>Get connected with Me:</span>
     </div>
     <!-- Left -->
 
