--- a/images/testimonal.html
+++ b/images/testimonal.html
@@ -21,7 +21,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
             <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="about.html">About</a>
@@ -30,7 +30,7 @@
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="testimonals.html">Testimonals</a>
+              <a class="nav-link active" href="testimonals.html">Testimonals</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -39,23 +39,17 @@
         </div>
       </div>
     </nav>
-  
-      <div class="container-lg" >
-        <div class="row justify-content-center align-items-center">
- 
-         <div class="col-lg-6 col-sm-12 text-center d-md-block ">
-                  <img id="Hpicture" class="img-fluid" src="images/placeholder.jpg" alt="">
-              </div> 
-              <div class="col-lg-6 col-sm-12 text-center text-md-start">
-                  <h1 id="header-text">
-                      <div class="display-5 fw-bold">My name is Hannah Dalwai.</div>
-                      <div class="display-6 text-dark fw-bold">Aspiring fullstack developer</div>
-                      <br><h2 id="h2ftw">Student at Life Choices Academy</h2>
-                  </h1>
-                  <a href="#pricing" class="btn btn-secondary btn-lg">View CV</a>
-              </div>
-         </div>
-      </div> 
+
+
+
+
+
+
+
+
+
+
+
 <br>
 <br>
 <br>
