--- a/images/testimonal.html
+++ b/images/testimonal.html
@@ -27,10 +27,10 @@
               <a class="nav-link " href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-link active" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="testimonals.html">Testimonals</a>
+              <a class="nav-link" href="testimonals.html">Testimonals</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -39,6 +39,12 @@
         </div>
       </div>
     </nav>
+
+
+
+
+
+
 
 
 
@@ -140,4 +146,5 @@
 <link rel="stylesheet" href="bootstrap.bundle.min.js">   
 </body>
 </html>
+
 
