--- a/contact.html
+++ b/contact.html
@@ -10,35 +10,35 @@
 </head>
 
 <body id="bgimg">
-     
-    <nav class="navbar navbar-expand-lg navbar-second bg-light fixed-top " >
-      <div class="container-fluid">
-        <a class="navbar-brand"></a>
-        <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <div></div>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-            <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+ <!-- navbar -->
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><i class="bi bi-book-half"></i><i class="bi bi-laptop"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav nav nav-pills" >
+        
+          <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="testimonals.html">Testimonals</a>
+              <a class="nav-link" href="testimonal.html">Testimonals</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+            </li>  
+      </ul>
+    </div>
+  </div>
+</nav>    
 
 
 
