--- a/testimonal.html
+++ b/testimonal.html
@@ -12,7 +12,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="bi bi-book-half"></i> Young Grasshopper</a>
+      <a class="navbar-brand" href="#">empty</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
