--- a/index.html
+++ b/index.html
@@ -57,17 +57,7 @@
                   <a href="#pricing" class="btn btn-secondary btn-lg">View CV</a>
               </div>
          </div>
-      </div> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+      </div> <br><br><br><br><br><br><br><br><br><br>
     <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
