--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <title>Hannah Dalwai</title>
 </head>
 
-<body id="bgimg">
+<body>
  <!-- navbar -->
  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container-fluid">
