--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel="icon" href="images/HD.png" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
-
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
     <title>Hannah Dalwai</title>
 </head>
 
