--- a/testimonal.html
+++ b/testimonal.html
@@ -4,8 +4,7 @@
     <link rel="icon" href="images/HD.png" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
-
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
     <title>Hannah Dalwai</title>
 </head>
 <body>
@@ -17,7 +16,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav nav nav-pills" >
+        <ul class="navbar-nav nav-pills" >
           
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
