--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <title>Hannah Dalwai</title>
 </head>
 
-<body id="bgimg">
+<body>
      
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
