fixed footer and about

--- a/about.html
+++ b/about.html
@@ -40,6 +40,10 @@
       </div>
     </nav>
 
+    <div id="abouttext" class="col-lg-6 col-sm-12 text-center text-md-start">
+      <h1 id="header-text"><div class="display-5 fw-bold">About</div></h1>
+      <br><p>hchduchauchuahcuhcuhcuhc jdjdjdj jcjdjd djjdjdn jdjdjd jdjdjdj jdjdjbdjdjdjjd hdhdhd jdhdhdh jsjdjdjdjdjdbbcdbc cdbcbc bcbcbc cbcbcbc bcbcbcb cbcbcbbc bcbcbcbc bcbcbc bcbcbc</p>
+  </div>
 
 
 
@@ -53,18 +57,7 @@
 
 
 
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <!-- Footer -->
+<br><br><br><br><br><br><br><br><br><br><!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
     <section
