--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
          </div>
       </div> <br><br><br><br><br><br><br><br><br><br>
     <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted ">
+<footer class="text-center text-lg-start bg-light text-muted fixed-auto">
     <!-- Section: Social media -->
     <section
       class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" >
