--- a/about.html
+++ b/about.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
     <title>Hannah Dalwai</title>
 </head>
-
-<body>
-     
+<body>  
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
@@ -39,12 +37,35 @@
         </div>
       </div>
     </nav>
-
     <div id="abouttext" class="col-lg-6 col-sm-12 text-center text-md-start">
       <h1 id="header-text"><div class="display-5 fw-bold">About</div></h1>
       <br><p>hchduchauchuahcuhcuhcuhc jdjdjdj jcjdjd djjdjdn jdjdjd jdjdjdj jdjdjbdjdjdjjd hdhdhd jdhdhdh jsjdjdjdjdjdbbcdbc cdbcbc bcbcbc cbcbcbc bcbcbcb cbcbcbbc bcbcbcbc bcbcbc bcbcbc</p>
   </div>
-
+    <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-lg-6 col-sm-12 text-center text-md-start">          
+<p>HTML</p>
+<div class="container">
+  <div class="skills html">90%</div>
+</div>
+<p>CSS</p>
+<div class="container">
+  <div class="skills css">80%</div>
+</div>
+<p>JavaScript</p>
+<div class="container">
+  <div class="skills js">65%</div>
+</div>
+<p>PHP</p>
+<div class="container">
+  <div class="skills php">60%</div>
+</div>   
+            </div>
+            <div class="col-lg-6 col-sm-12 text-center d-md-block">
+                <img class="img-fluid" src="assets/book.jpg" alt="">
+            </div>
+       </div>
+    </div> 
 
 
 
