--- a/about.html
+++ b/about.html
@@ -43,31 +43,215 @@
   </div>
     <div class="container-lg">
         <div class="row justify-content-center align-items-center">
-            <div class="col-lg-6 col-sm-12 text-center text-md-start">          
-<p>HTML</p>
-<div class="container">
-  <div class="skills html">90%</div>
-</div>
-<p>CSS</p>
-<div class="container">
-  <div class="skills css">80%</div>
-</div>
-<p>JavaScript</p>
-<div class="container">
-  <div class="skills js">65%</div>
-</div>
-<p>PHP</p>
-<div class="container">
-  <div class="skills php">60%</div>
-</div>   
+          <!-- Skills -->
+          <div class="col-lg-6 col-md-6 col-12">
+            <div id="skills" class="col-lg-12 col-md-12 col-12 text-center text-md-start">          
+              <p>HTML</p>
+              <div class="container">
+                <div class="skills html">90%</div>
+              </div>
+              <p>CSS</p>
+              <div class="container">
+                <div class="skills css">80%</div>
+              </div>
+              <p>JavaScript</p>
+              <div class="container">
+                <div class="skills js">65%</div>
+              </div>
+              <p>PHP</p>
+              <div class="container">
+                <div class="skills php">60%</div>
+              </div>   
             </div>
-            <div class="col-lg-6 col-sm-12 text-center d-md-block">
-                
+            <!-- Experience Timeline -->
+            <div class="text-center d-md-block">
+              <div class="wrapper">
+                <div class="center-line">
+                  <a href="https://en.wikipedia.org/wiki/Wiki" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+                </div>
+                <div class="row row-1">
+                  <section>
+                    <i class="icon fas fa-home"></i>
+                    <div class="details">
+                      <span class="title">Student at Life Choices</span>
+                      <span>20th Sep 2021</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Claire</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-2">
+                  <section>
+                    <i class="icon fas fa-star"></i>
+                    <div class="details">
+                      <span class="title">Gap "Year"</span>
+                      <span></span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Gloria</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-1">
+                  <section>
+                    <i class="icon fas fa-rocket"></i>
+                    <div class="details">
+                      <span class="title">Matriculation</span>
+                      <span>3rd December 2020</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Lily</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-2">
+                  <section>
+                    <i class="icon fas fa-globe"></i>
+                    <div class="details">
+                      <span class="title">Subject picking</span>
+                      <span>4th Aug 2016</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Mitchel</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-1">
+                  <section>
+                    <i class="icon fas fa-paper-plane"></i>
+                    <div class="details">
+                      <span class="title">Start of High School</span>
+                      <span>5th Jan 2021</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Jay</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-2">
+                  <section>
+                    <i class="icon fas fa-map-marker-alt"></i>
+                    <div class="details">
+                      <span class="title">End of Primary School</span>
+                      <span>6th Jan 2021</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Phil</i>
+                    </div>
+                  </section>
+                </div>
+              </div>  
+            </div>
+          </div>
+            <!-- Education -->
+            <div class="col-lg-6 col-md-6 col-12 text-center d-md-block">
+              <div class="wrapper">
+                <div class="center-line">
+                  <a href="https://en.wikipedia.org/wiki/Wiki" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+                </div>
+                <div class="row row-1">
+                  <section>
+                    <i class="icon fas fa-home"></i>
+                    <div class="details">
+                      <span class="title">Student at Life Choices</span>
+                      <span>20th Sep 2021</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Claire</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-2">
+                  <section>
+                    <i class="icon fas fa-star"></i>
+                    <div class="details">
+                      <span class="title">Gap "Year"</span>
+                      <span></span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Gloria</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-1">
+                  <section>
+                    <i class="icon fas fa-rocket"></i>
+                    <div class="details">
+                      <span class="title">Matriculation</span>
+                      <span>3rd December 2020</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Lily</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-2">
+                  <section>
+                    <i class="icon fas fa-globe"></i>
+                    <div class="details">
+                      <span class="title">Subject picking</span>
+                      <span>4th Aug 2016</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Mitchel</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-1">
+                  <section>
+                    <i class="icon fas fa-paper-plane"></i>
+                    <div class="details">
+                      <span class="title">Start of High School</span>
+                      <span>5th Jan 2021</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Jay</i>
+                    </div>
+                  </section>
+                </div>
+                <div class="row row-2">
+                  <section>
+                    <i class="icon fas fa-map-marker-alt"></i>
+                    <div class="details">
+                      <span class="title">End of Primary School</span>
+                      <span>6th Jan 2021</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                    <div class="bottom">
+                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
+                      <i>- Phil</i>
+                    </div>
+                  </section>
+                </div>
+              </div>  
             </div>
        </div>
-    </div> 
-
-
+    </div>  <!-- end -->
+</div>
+</div> 
 
 
 
