--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   
 
 
-<link rel="stylesheet" href="bootstrap.bundle.min.js">   
+<script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
