--- a/portfolio.html
+++ b/portfolio.html
@@ -55,17 +55,7 @@
 
 
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <!-- Footer -->
+<br><br><br><br><br><br><br><br><br><br><!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
     <section
