--- a/contact.html
+++ b/contact.html
@@ -158,10 +158,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-  
-
-
-<link rel="stylesheet" href="bootstrap.bundle.min.js">   
+<script src="bootstrap.bundle.min.js"></script>  
 </body>
 </html>
 
