--- a/about.html
+++ b/about.html
@@ -336,6 +336,6 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-<link rel="stylesheet" href="bootstrap.bundle.min.js">   
+<script src="bootstrap.bundle.min.js"></script>   
 </body>
 </html>
