--- a/portfolio.html
+++ b/portfolio.html
@@ -46,24 +46,27 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="images/project1.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>Flip Cards</h5>
+            <p><a href="#pricing" class="btn btn-secondary btn-lg">View in  GitHub</a></p>
+            <p><a href="#pricing" class="btn btn-secondary btn-lg">View inNetlify</a></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="..." class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <p><a href="#pricing" class="btn btn-secondary btn-lg">View in  GitHub</a></p>
+            <p><a href="#pricing" class="btn btn-secondary btn-lg">View in Netlify</a></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block text-dark">
             <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <p><a href="#pricing" class="btn btn-secondary btn-lg">View in  GitHub</a></p>
+            <p><a href="#pricing" class="btn btn-secondary btn-lg">View in Netlify</a></p> 
           </div>
         </div>
       </div>
@@ -166,10 +169,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-  
-
-
-<link rel="stylesheet" href="bootstrap.bundle.min.js">   
+<script src="bootstrap.bundle.min.js"></script>  
 </body>
 </html>
 
