--- a/testimonal.html
+++ b/testimonal.html
@@ -139,10 +139,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-  
-
-
-<link rel="stylesheet" href="bootstrap.bundle.min.js">   
+<script src="bootstrap.bundle.min.js"></script>   
 </body>
 </html>
 
