--- a/testimonal.html
+++ b/testimonal.html
@@ -38,6 +38,39 @@
     </div>
   </nav>
 
+<!-- cards -->
+  <div class="container">
+    <div class="card">
+      <div class="ribbon">
+        <div class="ribbon-text">Generic Heading</div>
+      </div>
+      <img src="https://picsum.photos/id/1050/1000" alt="img">
+      <div class="card-info">
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat nobis nam quaerat soluta ipsam repudiandae cumque. Impedit quisquam quidem laboriosam, quam sunt architecto numquam placeat iusto, obcaecati, vel fugit blanditiis?</p>
+        <a href="#">Link</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="ribbon">
+        <div class="ribbon-text">Generic Heading</div>
+      </div>
+      <img src="https://picsum.photos/id/1002/1000" alt="img">
+      <div class="card-info">
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat nobis nam quaerat soluta ipsam repudiandae cumque. Impedit quisquam quidem laboriosam, quam sunt architecto numquam placeat iusto, obcaecati, vel fugit blanditiis?</p>
+        <a href="#">Link</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="ribbon">
+        <div class="ribbon-text">Generic Heading</div>
+      </div>
+      <img src="https://picsum.photos/id/1070/1000" alt="img">
+      <div class="card-info">
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat nobis nam quaerat soluta ipsam repudiandae cumque. Impedit quisquam quidem laboriosam, quam sunt architecto numquam placeat iusto, obcaecati, vel fugit blanditiis?</p>
+        <a href="#">Link</a>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -53,19 +86,7 @@
 
 
 
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <!-- Footer -->
+<br><br><br><br><br><br><br><br><br><br><!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
     <section
@@ -142,5 +163,3 @@
 <script src="bootstrap.bundle.min.js"></script>   
 </body>
 </html>
-
-
