about rm timline

--- a/about.html
+++ b/about.html
@@ -156,112 +156,9 @@
               </div>  
             </div>
           </div>
-            <!-- Education -->
-            <div class="col-lg-6 col-md-6 col-12 text-center d-md-block">
-              <div class="wrapper">
-                <div class="center-line">
-                  <a href="https://en.wikipedia.org/wiki/Wiki" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
-                </div>
-                <div class="row row-1">
-                  <section>
-                    <i class="icon fas fa-home"></i>
-                    <div class="details">
-                      <span class="title">Student at Life Choices</span>
-                      <span>20th Sep 2021</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Claire</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-2">
-                  <section>
-                    <i class="icon fas fa-star"></i>
-                    <div class="details">
-                      <span class="title">Gap "Year"</span>
-                      <span></span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Gloria</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-1">
-                  <section>
-                    <i class="icon fas fa-rocket"></i>
-                    <div class="details">
-                      <span class="title">Matriculation</span>
-                      <span>3rd December 2020</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Lily</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-2">
-                  <section>
-                    <i class="icon fas fa-globe"></i>
-                    <div class="details">
-                      <span class="title">Subject picking</span>
-                      <span>4th Aug 2016</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Mitchel</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-1">
-                  <section>
-                    <i class="icon fas fa-paper-plane"></i>
-                    <div class="details">
-                      <span class="title">Start of High School</span>
-                      <span>5th Jan 2021</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Jay</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-2">
-                  <section>
-                    <i class="icon fas fa-map-marker-alt"></i>
-                    <div class="details">
-                      <span class="title">End of Primary School</span>
-                      <span>6th Jan 2021</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Phil</i>
-                    </div>
-                  </section>
-                </div>
-              </div>  
-            </div>
-       </div>
-    </div>  <!-- end -->
+    <!-- end -->
 </div>
 </div> 
-
-
-
-
-
-
-
-
-
-
 <br><br><br><br><br><br><br><br><br><br><!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
