--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <a href="#!" class="text-reset"><i class="bi bi-linkedin"> </i>Github</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-gear"></i>Netlify</a>
+              <a href="#!" class="text-reset"><img src="images/netlifyicon.png" alt="" style="height: 20px; color: grey;" ></i>Netlify</a>
             </p>
             <p>
               <a href="#!" class="text-reset"><i class="bi bi-linkedin"></i></i>Linkdin</a>
