--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row justify-content-center align-items-center">
  
          <div class="col-lg-6 col-sm-12 text-center d-md-block ">
-                  <img id="Hpicture" class="img-fluid" src="images/placeholder.jpg" alt="">
+                  <img id="Hpicture" class="img-fluid" src="images/me-min(1).jpg" alt="">
               </div> 
               <div class="col-lg-6 col-sm-12 text-center text-md-start">
                   <h1 id="header-text">
